# legume-rs

./: .Rhistory  .gitignore  .mailmap  .make-install-status  Cargo.toml  LICENSE  Makefile  README.md  temp.R
asap-alg/: Cargo.toml
asap-alg/src/: collapse_data.rs  lib.rs  normalization.rs  random_projection.rs
asap-data/: Cargo.toml
asap-data/src/: common_io.rs  lib.rs  main.rs  mtx_io.rs  ndarray_io.rs  ndarray_util.rs  simulate.rs  sparse_data_visitors.rs  sparse_io.rs  sparse_io.rs~  sparse_io_vector.rs  sparse_matrix_hdf5.rs  sparse_matrix_zarr.rs  statistics.rs  tensor_io.rs
asap-data/tests/: hdf5_tests.rs  simulation_tests.rs  zarr_tests.rs
asap-embed/: Cargo.toml
asap-embed/src/: asap_collapse_data.rs  asap_common.rs  asap_embed_common.rs  asap_normalization.rs  asap_random_projection.rs  asap_routines_latent_representation.rs  asap_routines_post_process.rs  asap_visitors.rs  candle_aux_linear.rs  candle_data_loader.rs  candle_etm.rs  candle_inference.rs  candle_loss_functions.rs  candle_model_decoder.rs  candle_model_encoder.rs  candle_model_topic.rs  candle_model_traits.rs  candle_vae_inference.rs  collapse_data.rs  common.rs  embed_common.rs  lib.rs  main.rs  matrix_param.rs  normalization.rs  random_projection.rs
asap-embed/tests/: #collapse_tests.rs#  collapse_tests.rs  pmf_tests.rs
asap-network/: Cargo.toml
asap-srt/: Cargo.toml
asap-srt/src/: main.rs  srt_cell_pairs.rs  srt_collapse_pairs.rs  srt_common.rs  srt_random_projection.rs  srt_routines_latent_representation.rs  srt_routines_post_process.rs  srt_routines_pre_process.rs
asap-vae/: Cargo.toml
auxiliary-data/: Cargo.toml
auxiliary-data/data/: blood_label_cl.tsv
auxiliary-data/src/: cell_annotations.rs  cell_ontology.rs  data_loading.rs  feature_names.rs  frozen_features.rs  gene_sets.rs  lib.rs  logging.rs  ontology.rs
candle-util/: Cargo.toml  todo.md
candle-util/src/: candle_aux_gat.rs  candle_aux_gcn.rs  candle_aux_layers.rs  candle_aux_linear.rs  candle_aux_module.rs  candle_bipartite_decoder.rs  candle_cell_grouped_data_loader.rs  candle_data_loader.rs  candle_data_loader_util.rs  candle_decoder_delta_topic.rs  candle_decoder_embedded_topic.rs  candle_decoder_hierarchical_topic.rs  candle_decoder_indexed_topic.rs  candle_decoder_joint_topic.rs  candle_decoder_multimodal_topic.rs  candle_decoder_nb_mixture.rs  candle_decoder_poisson.rs  candle_decoder_topic.rs  candle_decoder_vmf_topic.rs  candle_dyn_decoder.rs  candle_encoder_cell_embedded.rs  candle_encoder_indexed.rs  candle_encoder_joint_softmax.rs  candle_encoder_multimodal_softmax.rs  candle_encoder_softmax.rs  candle_encoder_softmax_iaf.rs  candle_ess.rs  candle_indexed_data_loader.rs  candle_indexed_model_traits.rs  candle_inference.rs  candle_joint_data_loader.rs  candle_loss_functions.rs  candle_marker_decoder.rs  candle_marker_encoder.rs  candle_matched_data_loader.rs  candle_matched_decoder_topic.rs  candle_matched_encoder.rs  candle_matched_encoder_softmax.rs  candle_matched_vae_inference.rs  candle_model_encoder.rs  (+16 more)
candle-util/tests/: grad_clip_nonfinite.rs  masked_contrastive.rs  module_layer_tests.rs  test_multilevel_susie.rs
chickpea/: Cargo.toml  README.Rmd  README.md  logo.txt  todo.md
chickpea/docs/: peak_to_gene_math.md  topic_confounding.md
chickpea/src/: chickpea_input.rs  cis_mask.rs  cluster.rs  coarsening.rs  common.rs  fit_linking_models.rs  fit_topic.rs  input.rs  linkage.rs  linking.rs  main.rs  manifest.rs  run_cis_linking.rs  run_embed.rs  run_sim_link.rs  run_spectral.rs
cnv/: Cargo.toml
cnv/src/: coarsening_tree.rs  detect.rs  factorial_tree.rs  genome_order.rs  genomic_coarsening.rs  gibbs_hmm.rs  hmm.rs  kmeans_init.rs  lib.rs  per_sample.rs
cocoa/: Cargo.toml  README.md  todo.md
cocoa-diff/: Cargo.toml
cocoa-diff/src/: cocoa_collapse_data.rs  cocoa_common.rs  collapse_data.rs  common.rs  input.rs  lib.rs  main.rs  randomly_partition_data.rs  run_collapse.rs  run_diff.rs  run_sim.rs  stat.rs
cocoa/src/: alg_collapse.rs  cnv_call.rs  cocoa_collapse.rs  cocoa_diff.rs  cocoa_stat.rs  collapse_cocoa_data.rs  collapse_data.rs  common.rs  input.rs  main.rs  randomly_partition_data.rs  run_collapse.rs  run_diff.rs  run_sim.rs  run_sim_collider.rs  run_sim_one_type.rs  run_sim_spatial.rs  run_spatial_diff.rs  simulate.rs  spatial_match.rs  stat.rs  util.rs
data-beans/: Cargo.toml  README.md
data-beans-alg/: Cargo.toml
data-beans-alg/src/: bhc.rs  cell_pairs.rs  collapse_data.rs  dc_poisson.rs  dc_poisson_tests.rs  feature_coarsening.rs  feature_coarsening_multilevel.rs  feature_coarsening_multilevel_tests.rs  feature_coarsening_tests.rs  gene_weighting.rs  hvg.rs  hvg_selection.rs  lib.rs  nb_dispersion.rs  nb_dispersion_tests.rs  normalization.rs  pseudobulk.rs  pseudobulk_tests.rs  random_projection.rs  refine_multilevel.rs  refine_multilevel_tests.rs  sparse_streaming.rs  union_find.rs
data-beans-alg/tests/: bhc.rs  cell_pairs.rs  refine_multilevel.rs
data-beans-sim/: Cargo.toml  README.md
data-beans-sim/docs/: bulk.md  faba.md  multimodal.md  multiome.md  topic.md
data-beans-sim/src/: core.rs  deconv.rs  handlers.rs  lib.rs  main.rs  multimodal.rs
data-beans/src/: convert.rs  hdf5_io.rs  interactive.rs  lib.rs  main.rs  misc.rs  qc.rs  qc_lib.rs  qc_lib_tests.rs  simulate.rs  simulate_deconv.rs  simulate_multimodal.rs  sparse_data_visitors.rs  sparse_io.rs  sparse_io_stack.rs  sparse_io_vector.rs  sparse_matrix_hdf5.rs  sparse_util.rs  (+2 more)
enrichment/: Cargo.toml
faba/: Cargo.toml  README.Rmd  README.md  TODO.md  logo.txt  validate_rna_mod_embed.R
fagioli/: Cargo.toml  README.md  logo.txt  todo.md
genomic-data/: Cargo.toml
graph-embedding-util/: Cargo.toml
hsblock/: Cargo.toml
leiden/: Cargo.toml  LICENSE
matrix-param/: Cargo.toml  build.rs
matrix-util/: Cargo.toml
mcmc-util/: Cargo.toml
pinto/: Cargo.toml  DESIGN.md  PLAN.md  PLAN_V3.md  README.md  TODO.md  example_ffpe_pancreas.Rmd  logo.txt
plot-utils/: Cargo.toml
senna/: Cargo.toml  README.md  TODO.md  from-itopic2.safetensors  from-topic2.safetensors  logo.txt
sprout/: Cargo.toml
(+1092 files in other folders)
