[workspace]

members = [
	"data-beans",
	"data-beans-alg",
	"matrix-util",
	"matrix-param",
	"mcmc-util",
	"senna",
	"pinto",
	"cocoa-diff",
	"faba",
	"chickpea"]

resolver = "3"

[workspace.package]
license = "MIT"
authors = ["Yongjin Park <ypp@stat.ubc.ca>"]
description = "Library for Expedited Genomics data analysis with Unsupervised Machine learning Estimators in Rust"
repository = "https://github.com/causalpathlab/legume-rs"
homepage = "https://github.com/causalpathlab/legume-rs"
edition = "2021"
version = "0.1.1"

[workspace.dependencies]

anyhow = "1.0"
flate2 = { version = "1.0.34" }
clap = { version = "4.5.20", features = ["derive"] }
num_cpus = "1.16.0"
rayon = "1.10.0"

tempfile = "3.2"
rand = "0.9"
rand_distr = "0.5.1"

ndarray = { version = "0.17.1", features = ["rayon","serde","approx","blas"]}
ndarray-rand = { version = "0.15" }

approx = "0.5.1"
special = "0.11.3"
serde_json = "1.0"
serde = "1.0"

nalgebra = { version = "0.34" }
nalgebra-sparse = { version = "0.11" }
num-traits = "0.2.19"

dashmap = { version = "6.1.0", features = ["rayon"] }
fnv = { version = "1.0.7" }

instant-distance = "0.6"
indicatif = { version = "^0.18", features = ["rayon"] }

parquet = { version = "57" }
env_logger = { version = "0.11" }
log = { version = "0.4" }
zip = { version = "6" }

data-beans = { path = "data-beans"}
data-beans-alg = { path = "data-beans-alg"}
matrix-param = { path = "matrix-param" }
matrix-util = { path = "matrix-util" }
candle-util = { path = "candle-util" }
mcmc-util = { path = "mcmc-util" }
