[workspace]

members = [
	"data-beans",
	"data-beans-alg",
	"matrix-util",
	"matrix-param",
	"mcmc-util",
	"senna",
	"pinto",
	"cocoa",
	"faba",
	"chickpea",
	"fagioli", "genomic-data", "leiden", "hsblock"]

resolver = "3"

[workspace.package]
license = "MIT"
authors = ["Yongjin Park <ypp@stat.ubc.ca>"]
description = "Library for Expedited Genomics data analysis with Unsupervised Machine learning Estimators in Rust"
repository = "https://github.com/causalpathlab/legume-rs"
homepage = "https://github.com/causalpathlab/legume-rs"
edition = "2021"
version = "0.1.1"

[workspace.dependencies]

anyhow = "1.0"
flate2 = { version = "1.0.34" }
clap = { version = "4.5.20", features = ["derive"] }
num_cpus = "1.16.0"
rayon = "1.10.0"

tempfile = "3.2"
rand = "0.9"
rand_distr = "0.5.1"

ndarray = { version = "0.16", features = ["rayon","serde","approx","blas"]}
ndarray-rand = { version = "0.15" }

approx = "0.5.1"
special = "0.11.3"
serde_json = "1.0"
serde = "1.0"

nalgebra = { version = "0.34" }
nalgebra-sparse = { version = "0.11" }
num-traits = "0.2.19"

dashmap = { version = "6.1.0", features = ["rayon"] }
fnv = { version = "1.0.7" }

hnsw_rs = "0.3"
anndists = "0.1"
indicatif = { version = "^0.18", features = ["rayon"] }
indicatif-log-bridge = { version = "0.2" }

parquet = { version = "56" }
rust-htslib = "0.50.0"
env_logger = { version = "0.11" }
log = { version = "0.4" }
regex = { version = "1" }
zip = { version = "6" }

statrs = { version = "0.18" }
coitrees = { version = "0.4" }
clustering = { version = "0.2.1", features = ["parallel"] }
colored = { version = "2" }

data-beans = { path = "data-beans"}
data-beans-alg = { path = "data-beans-alg"}
matrix-param = { path = "matrix-param" }
matrix-util = { path = "matrix-util" }
candle-util = { path = "candle-util" }
genomic-data = { path = "genomic-data" }
faba = { path = "faba" }
leiden = { path = "leiden" }
hsblock = { path = "hsblock" }
