[package]
name = "asap-data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asap-data"
path = "src/main.rs"

[dependencies]
matrix-util = { path = "../matrix-util" }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }

hdf5 = { package = "hdf5-metno", version = "0.10", features = ["blosc"] }
libz-sys = { version = "1.1", features = ["libc"], default-features = false }
zarrs = { version = "0.19" }

tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }

instant-distance = { workspace = true }
indicatif = { workspace = true }
env_logger = "0.11.6"
log = "0.4.25"

# [target.'cfg(target_os = "linux")'.dependencies]
# candle-core = {  git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["cuda","cudarc","cudnn"] }
# [target.'cfg(target_os = "macos")'.dependencies]
# candle-core = {  git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["metal","accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = {  version = "0.8.4", features = ["cuda","cudarc","cudnn"] }
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = {  version = "0.8.4", features = ["metal","accelerate"] }

[dev-dependencies]
