[package]
name = "asap-data"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "asap-data"
path = "src/main.rs"
description = "data structure for the analysis of single cell data by approximate random projection"

[dependencies]
matrix-util = { workspace = true }
candle-util = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }

hdf5 = { package = "hdf5-metno", version = "0.10", features = ["blosc"] }
libz-sys = { version = "1.1", features = ["libc"], default-features = false }
zarrs = { version = "0.21" }

tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }

instant-distance = { workspace = true }
indicatif = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
