[package]
name = "asap-embed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asap-embed"
path = "src/main.rs"

[dependencies]
asap-data = { path = "../asap-data" }

anyhow = "1.0"
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.34"

num_cpus = "1.16.0"
rayon = "1.10.0"
hdf5 = { package = "hdf5-metno", version = "0.9", features = ["blosc"] }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.10", features = ["static", "zlib", "threadsafe"] }
libz-sys = { version = "1.1", features = ["libc"], default-features = false }
tempfile = "3.2"
zarrs = { version = "0.17.1", features = ["gzip"] }
serde_json = "1.0"
serde = "1.0.214"

# ndarray = { version = "0.15.6", features = ["rayon"]}
# ndarray-rand = "0.14"
# ndarray-parallel = "0.9.1"
instant-distance = "0.6.1"
num-traits = "0.2.19"
rand = "0.8.5"
special = "0.11.3"
nalgebra = "0.33.2"
rand_distr = "0.4.3"

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.8", features = ["cuda","cudarc","cudnn"] }
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal","accelerate"] }

[dev-dependencies]
