[package]
name = "asap-embed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asap-embed"
path = "src/main.rs"

[dependencies]
asap-data = { path = "../asap-data" }
matrix-util = { path = "../matrix-util" }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
approx = { workspace = true }

instant-distance = { workspace = true }
special = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.8", features = ["cuda","cudarc","cudnn"] }
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal","accelerate"] }

[dev-dependencies]
