[package]
name = "asap-srt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asap-srt"
path = "src/main.rs"

[dependencies]
asap-data = { path = "../asap-data" }
matrix-util = { path = "../matrix-util" }
matrix-param = { path = "../matrix-param" }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

instant-distance = { workspace = true }
special = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
