[package]
name = "asap-vae"
version = "0.1.0"
edition = "2021"

[dependencies]
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8.0", features = ["metal","accelerate"] }
[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.8.0", features = ["cuda","cudarc","cudnn"] }
