[package]
name = "candle-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

instant-distance = { workspace = true }
special = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# candle-core = {  git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["cuda","cudarc","cudnn"] }
# candle-nn = {  git = "https://github.com/huggingface/candle.git", package = "candle-nn", features = ["cuda"] }
candle-core = {  version = "0.9.1", features = ["cuda","cudarc","cudnn"] }
candle-nn = {  version = "0.9.1", features = ["cuda"] }

[target.'cfg(target_os = "macos")'.dependencies]
# candle-core = {  git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["metal","accelerate"] }
# candle-nn = {  git = "https://github.com/huggingface/candle.git", package = "candle-nn", features = ["metal","accelerate"] }
candle-core = {  version = "0.9.1", features = ["metal","accelerate"] }
candle-nn = {  version = "0.9.1", features = ["metal","accelerate"] }
