[package]
name = "candle-util"
authors.workspace = true
edition.workspace = true
license.workspace = true

version = "0.2.9"

[dependencies]

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

special = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

rustc-hash = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }
parquet = { workspace = true }

[features]
# Default: CPU only. Build on any platform without GPU toolchains.
default = []
# Opt-in NVIDIA CUDA + cuDNN backend (Linux).
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-nn/cuda"]
# Opt-in Apple Metal + Accelerate backend (macOS).
metal = [
    "candle-core/metal",
    "candle-core/accelerate",
    "candle-nn/metal",
    "candle-nn/accelerate",
]

[dependencies.candle-core]
version = "0.10"
default-features = false

[dependencies.candle-nn]
version = "0.10"
default-features = false
