[package]
name = "chickpea"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version = "0.3.0"

[[bin]]
name = "chickpea"
path = "src/main.rs"

[features]
default = []
cuda = [
    "candle-util/cuda",
    "data-beans/cuda",
    "data-beans-alg/cuda",
    "matrix-util/cuda",
    "matrix-param/cuda",
]
metal = [
    "candle-util/metal",
    "data-beans/metal",
    "data-beans-alg/metal",
    "matrix-util/metal",
    "matrix-param/metal",
]
hdf5 = ["data-beans/hdf5"]

[dependencies]
auxiliary-data = { workspace = true }
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
candle-util = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }
genomic-data = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

rust-htslib = { workspace = true }
ctrlc = { workspace = true }
colored = { workspace = true }
special = { workspace = true }
indicatif = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }

