[package]
name = "cocoa-diff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "asap-diff"
path = "src/main.rs"

[dependencies]
asap-data = { path = "../asap-data" }
asap-embed = { path = "../asap-embed" }
matrix-util = { path = "../matrix-util" }
matrix-param = { path = "../matrix-param" }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

instant-distance = { workspace = true }
special = { workspace = true }
indicatif = { workspace = true }
log = "0.4"
env_logger = "0.11"
