[package]
name = "cocoa"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Counterfactual Confounder Analysis"

[[bin]]
name = "cocoa"
path = "src/main.rs"

[dependencies]
asap-data = { path = "../asap-data" }
asap-alg = { path = "../asap-alg" }
asap-embed = { path = "../asap-embed" }
matrix-util = { path = "../matrix-util" }
matrix-param = { path = "../matrix-param" }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

instant-distance = { workspace = true }
special = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

