[package]
name = "cocoa"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Counterfactual Confounder Adjustment for Differential Analysis"

[[bin]]
name = "cocoa"
path = "src/main.rs"

[dependencies]
auxiliary-data = { workspace = true }
cnv = { workspace = true }
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
data-beans-sim = { workspace = true }
genomic-data = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

special = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rust-htslib = { workspace = true }
rustc-hash = { workspace = true }

