[package]
name = "data-beans-alg"
authors.workspace = true
edition.workspace = true
license.workspace = true
version = "0.3.4"
description = "random projection and collapsing routines"

[features]
default = []
cuda = [
    "candle-util/cuda",
    "data-beans/cuda",
    "matrix-util/cuda",
    "matrix-param/cuda",
]
metal = [
    "candle-util/metal",
    "data-beans/metal",
    "matrix-util/metal",
    "matrix-param/metal",
]

[dependencies]
auxiliary-data = { workspace = true }
data-beans = { workspace = true }
candle-util = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

rustc-hash = { workspace = true }
special = { workspace = true }
indicatif = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
