[package]
name = "data-beans-sim"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version = "0.3.2"

[[bin]]
name = "data-beans-sim"
path = "src/main.rs"

[features]
default = []
cuda = ["data-beans/cuda", "data-beans-alg/cuda", "matrix-util/cuda"]
metal = ["data-beans/metal", "data-beans-alg/metal", "matrix-util/metal"]
hdf5 = ["data-beans/hdf5"]

[dependencies]
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
matrix-util = { workspace = true }
leiden = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }
statrs = { workspace = true }

rayon = { workspace = true }
indicatif = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
