[package]
name = "data-beans"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "data-beans"
path = "src/main.rs"

[dependencies]
matrix-util = { workspace = true }
matrix-param = { workspace = true }
candle-util = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }

hdf5 = { package = "hdf5-metno", version = "0.10", features = ["blosc"] }
libz-sys = { version = "1.1", features = ["libc"], default-features = false }
zarrs = { version = "0.22.6" }

tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }

instant-distance = { workspace = true }
indicatif = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }
fnv = { workspace = true }
zip = { workspace = true }
