[package]
name = "data-beans"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "data-beans"
path = "src/main.rs"

[features]
default = []
cuda = ["candle-util/cuda", "matrix-util/cuda", "matrix-param/cuda"]
metal = ["candle-util/metal", "matrix-util/metal", "matrix-param/metal"]
# Pulls in libhdf5 — opt-in so installs on hosts without HDF5 headers still
# build. When off, the HDF5 sparse backend and all H5/H5AD readers compile
# out; .zarr / .zarr.zip remain the supported formats.
hdf5 = ["dep:hdf5"]

[dependencies]
matrix-util = { workspace = true }
matrix-param = { workspace = true }
candle-util = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }

hdf5 = { package = "hdf5-metno", version = "0.12.1", features = ["blosc"], optional = true }
libz-sys = { version = "1.1", features = ["libc"], default-features = false }
zarrs = { version = "0.23" }

tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }

indicatif = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
zip = { workspace = true }
zarrs_zip = "0.5"
